# meaty_ore_game

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build-and-upload.yml
assets/: Bullet.blend  Bullet.glb  Explosion.glb  Rock-0.glb  Rock-1.glb  Rock-2.glb  Rock-Debris.glb  Saucer-Missile.glb  Saucer.v1.glb  Saucer.v2.blend  Saucer.v2.blend1  Saucer.v2.glb  Shield.glb  SpaceshipNew.blend  SpaceshipNew.blend1  SpaceshipNew.glb  explosion.blend
src/: ambient_sound.rs  app_globals.rs  app_setup.rs  asset_loader.rs  asteroids.rs  camera.rs  collision_detection.rs  debug.rs  despawn.rs  game_over.rs  health.rs  hud.rs  lighting.rs  main.rs  movement.rs  saucer.rs  schedule.rs  score_text.rs  sound_fx.rs  spaceship.rs  state.rs
src/asteroids/: levels.rs  mod.rs
src/sound/: ambient.rs  effects.rs  mod.rs
src/spaceship/: mod.rs  shield.rs
