[package]
name = "meaty_ore"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
include = ["/assets/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.16.1"
rand = "0.9.1"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (Including Bevy)
[profile.dev.package."*"]
opt-level = 3
